Fix voice readiness, measure turn latency, and validate Android APK builds